# python_code_quality_ci_pipeline

./: .gitignore  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: code-quality.yaml
src/python_code_quality_ci_pipeline/: __init__.py
tests/python_code_quality_ci_pipeline/: test_init.py
