[project]
name = "python-code-quality-ci-pipeline"
version = "0.1.0"
description = "Python Code Quality"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.1",
]

[project.scripts]
python-code-quality-ci-pipeline = "python_code_quality_ci_pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.distutils.bdist_wheel]
universal = true

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]
